--- a/src/components/FileList.css
+++ b/src/components/FileList.css
@@ -5,6 +5,15 @@
     margin: 0 auto;
 }
 
+.file-list-container.is-inactive {
+    position: fixed;
+    inset: 0;
+    opacity: 0;
+    pointer-events: none;
+    height: 0;
+    overflow: hidden;
+}
+
 .file-list-header {
     display: flex;
     align-items: center;
